--- a/combinator-react/src/App.css
+++ b/combinator-react/src/App.css
@@ -11,7 +11,18 @@ body {
   align-items: center;
   width: 100vw;
   min-height: 100vh;
-  background-color: #535353;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.text-node { background-clip: text !important; -webkit-background-clip: text !important; }
+
+.canvas {
+  position: relative;
+  width: 100%;
+  background: #ffffff00;
   overflow: hidden;
   display: flex;
   align-items: start;
@@ -23,6 +34,12 @@ body {
   flex-grow: 1;
 }
 
-* {
-  box-sizing: border-box;
+.board {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: #7a7a7a;
+  overflow: hidden;
+  flex-shrink: 0;
+  align-self: start;
 }
