--- a/combinator-react/lib/components/card/card.css
+++ b/combinator-react/lib/components/card/card.css
@@ -22,44 +22,25 @@
     height: 4vh;
     border-radius: 0;
     flex-shrink: 0;
+    user-select: none;
   }
 
   .card-name {
     width: 4.5vw;
     height: 2vh;
     flex-shrink: 0;
-  }
-  .card-name .root-0 {
     display: flex;
-    white-space: break-spaces;
     align-items: center;
-  }
-  .card-name .root-0-paragraph-set-0 {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: inherit;
-    margin-right: 0;
     vertical-align: top;
-  }
-  .card-name .root-0-paragraph-set-0-paragraph-0 {
-    font-size: 0;
     line-height: 1.2;
-    margin: 0;
     text-align: justify;
-  }
-  .card-name .root-0-paragraph-set-0-paragraph-0-text-0 {
     color: rgba(0, 0, 0, 1);
     text-transform: uppercase;
-    line-break: auto;
-    overflow-wrap: initial;
-    white-space: pre;
-    text-rendering: geometricPrecision;
-    caret-color: rgba(0, 0, 0, 1);
-    text-decoration: none;
     letter-spacing: 0;
     font-size: 1.5rem;
     font-family: "sourcesanspro";
     font-style: normal;
     font-weight: 500;
+    user-select: none;
   }
   
