Tydied up the Card and Element css definition
Also made it so that the name and icon could not be selected, fixing an issue where they were being selected when dragging the parent component

--- a/combinator-react/lib/components/element/element.css
+++ b/combinator-react/lib/components/element/element.css
@@ -22,6 +22,7 @@
     height: 4vh;
     border-radius: 0;
     flex-shrink: 0;
+    user-select: none;
   }
 
   .element-name {
@@ -40,5 +41,6 @@
     font-family: "sourcesanspro";
     font-style: normal;
     font-weight: 500;
+    user-select: none;
   }
   
