Fixed Card positioning when spawning or dragging
The Cards' positions are now correctly bound by the Board

--- a/lib/containers/board/board.css
+++ b/lib/containers/board/board.css
@@ -19,9 +19,9 @@ body {
 
 .board {
   position: relative;
-  width: 1664px;
-  height: 1080px;
-  background: #ebcfbd;
+  width: 90vw;
+  height: 100vh;
+  background: #7a7a7a;
   overflow: hidden;
   flex-shrink: 0;
   align-self: start;
